--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ body.embed-compact .composition-toggle-row {
 }
 
 body.embed-compact .chart-canvas--tall {
-  min-height: 320px;
+  min-height: 0;
 }
 
 .bar-chart-wrap {
